# audio-translator

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/fastapi_google_live/: cleanup.py  client.py  main.py  request.py  responses.py  settings.py  supported_languages.py  translation.py
